# MemWord

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  version4_plan.md
MemWord/: CMakeLists.txt  bookui.cpp  bookui.h  bookui.ui  learnwordgroupwidget.cpp  learnwordgroupwidget.h  learnwordgroupwidget.ui  main.cpp  memword.cpp  memword.h  memword.ui  orgschemadata.cpp  orgschemadata.h  selectwordwidget.cpp  selectwordwidget.h  selectwordwidget.ui  wordgroupui.cpp  wordgroupui.h  wordgroupui.ui  wordwidget.cpp  wordwidget.h  wordwidget.ui  writesentencewidget.cpp  writesentencewidget.h  writesentencewidget.ui
MemWord/dataModule/: CMakeLists.txt
MemWord/dataModule/header/: all_func_definition.h  allclassheaders.h  book.h  bookschema.h  phrase.h  phraseschema.h  sentence.h  sentenceschema.h  translation.h  translationschema.h  word.h  wordgroup.h  wordgroupschema.h  wordschema.h
MemWord/dataModule/src/: all_func_definition.cpp  book.cpp  bookschema.cpp  phrase.cpp  phraseschema.cpp  sentence.cpp  sentenceschema.cpp  translation.cpp  translationschema.cpp  word.cpp  wordgroup.cpp  wordgroupschema.cpp  wordschema.cpp
log/: devlog.md
